--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,4 +1,8 @@
 .checkout {
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
 }
 .checkout__title {
   margin-right: 10px;
